@@ -11,20 +11,108 @@
     <packaging>pom</packaging>
 
     <properties>
-        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <java.version>14</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+
+        <junit.jupiter.version>5.1.0</junit.jupiter.version>
+        <junit.platform.version>1.1.0</junit.platform.version>
+
+        <tests.excluded.tags>slow</tests.excluded.tags>
     </properties>
 
     <modules>
-        <module>location-history-mapper</module>
-        <module>location-history-loader-google</module>
+        <module>core/mapper</module>
+        <module>core/loaders/google</module>
 
-        <module>location-history-app</module>
-        <module>location-history-lambda</module>
+        <module>apps/web</module>
+        <module>apps/lambda</module>
     </modules>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <compilerId>frgaal</compilerId>
+
+                        <release>${java.version}</release>
+                        <source>${java.version}</source>
+
+                        <target>1.8</target>
+
+                        <compilerArgs>
+                            <arg>-Xlint:deprecation</arg>
+                            <arg>--enable-preview</arg>
+                        </compilerArgs>
+                        <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                    </configuration>
+
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.frgaal</groupId>
+                            <artifactId>compiler-maven-plugin</artifactId>
+                            <version>14.0.2</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.19.1</version>
+                    <configuration>
+                        <argLine>--enable-preview</argLine>
+                        <includes>
+                            <include>**/Test*.java</include>
+                            <include>**/*Test.java</include>
+                            <include>**/*Tests.java</include>
+                            <include>**/*TestCase.java</include>
+                        </includes>
+                        <properties>
+                            <excludeTags>${tests.excluded.tags}</excludeTags>
+                        </properties>
+                    </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.junit.platform</groupId>
+                            <artifactId>junit-platform-surefire-provider</artifactId>
+                            <version>${junit.platform.version}</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>${junit.jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>${junit.jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>3.9.0</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>2.8.2</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
